--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">    
     <head>
-        <title>My Web Page</title>
+        <title>Tony Liu</title>
     </head>
     <body>
-        <h1>Welcome to My Web Page</h1>
-        <p>This is a first test HTML page.</p>
-     
+        <img src="Photo.png" alt="Tony Liu" width="200" height="200">
+        <h1>Tony Liu</h1>
+        <h2>Majoring in Computer Science | Student at UC Riverside</h2>
+
     </body>
 </html>
