--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,11 @@
         <img src="Photo.png" alt="Tony Liu" width="200" height="200">
         <h1>Tony Liu</h1>
         <h2>Majoring in Computer Science | Student at UC Riverside</h2>
+        <div>       
+        <a href="https://www.linkedin.com/in/tony-liu-li/">LinkedIn</a> |
+        <a href="https://github.com/Yilunot">GitHub</a> |
+        <a href="mailto:Tonyliu05@hotmail.com">Email</a>
+        </div>
 
     </body>
 </html>
