--- a/Index.html
+++ b/Index.html
@@ -13,5 +13,15 @@
         <a href="mailto:Tonyliu05@hotmail.com">Email</a>
         </div>
 
+        <div>
+            <h3>About Me</h3>
+            <p>Hi, I'm Tony Liu, a Computer Science student at UC Riverside. 
+             have a passion for coding and technology, 
+             and I'm always eager to learn new things.</p>
+        </div>
+
+        
+
+
     </body>
 </html>
