--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,20 @@
              have a passion for coding and technology, 
              and I'm always eager to learn new things.</p>
         </div>
+        <div>
+            <h3>Experience</h3>
+            Burger King Restaurant | Hayward CA                                  	August 2017-December 2022
+            Shift Manager
+            Delegated tasks to team members.
+            Supervised safety requirements and standard operating procedures.
+            Handled escalated customer complaints to provide full resolutions and promote loyalty.
+            .
 
+            Balboa Logistics and Airport Services| Panama, PA         		August 2016-April 2017 Checking Assistant for Luftanta and Turkish Airlines.
+            Executed the Safety Protocol for Customers and Airplanes operation.
+            Directed passengers through checkpoints and terminals quickly safely.
+        </div>
+        
         
 
 
