--- a/Index.html
+++ b/Index.html
@@ -71,5 +71,19 @@ Current Overall GPA: 3.55
 </p>
 
 
+        </div>
+        <div>
+            <h3>Projects</h3>
+            <p>Project</p>
+<p>Initiated and led the computer science club in Chabot College that grew to 120 members.
+learned algorithms and learned about robotic Rubik's cube robot solvers. 
+Designed the propeller for a solar motor boat for solar regatta competition
+NASA workshop work in camera system to send tardisgate to the moon
+Lead a team of 4 through different hackathons working on AI.</p>
+
+
+        </div>
+
+
     </body>
 </html>
