--- a/Index.html
+++ b/Index.html
@@ -1,88 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">    
-    <head>
-        <title>Tony Liu</title>
-    </head>
-    <body>
-        <img src="Photo.png" alt="Tony Liu" width="200" height="200">
-        <h1>Tony Liu</h1>
-        <h2>Majoring in Computer Science | Student at UC Riverside</h2>
-        <div>       
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Tony Liu</title>
+</head>
+<body>
+
+    <!-- Header and Image -->
+    <img src="Photo.png" alt="Tony Liu" width="200" height="200">
+    <h1 id="name">Tony Liu</h1>
+    <h2 id="subheading">Majoring in Computer Science | Student at UC Riverside</h2>
+
+    <!-- Social Links -->
+    <div>
         <a href="https://www.linkedin.com/in/tony-liu-li/">LinkedIn</a> |
         <a href="https://github.com/Yilunot">GitHub</a> |
         <a href="mailto:Tonyliu05@hotmail.com">Email</a>
-        </div>
+    </div>
 
-        <div>
-            <h3>About Me</h3>
-            <p>Hi, I'm Tony Liu, a Computer Science student at UC Riverside. 
-             have a passion for coding and technology, 
-             and I'm always eager to learn new things.</p>
-        </div>
-        
-        <div>
-            <h3>Experience</h3>
-            Burger King Restaurant | Hayward CA                                  	August 2017-December 2022
-            Shift Manager
-            Delegated tasks to team members.
-            Supervised safety requirements and standard operating procedures.
-            Handled escalated customer complaints to provide full resolutions and promote loyalty.
-            .
+    <!-- About Section -->
+    <div>
+        <h3 id="about">About Me</h3>
+        <p>
+            Hi, I'm Tony Liu, a Computer Science student at UC Riverside. 
+            I have a passion for coding and technology, and I'm always eager to learn new things.
+        </p>
+    </div>
 
-            Balboa Logistics and Airport Services| Panama, PA         		August 2016-April 2017 Checking Assistant for Luftanta and Turkish Airlines.
-            Executed the Safety Protocol for Customers and Airplanes operation.
-            Directed passengers through checkpoints and terminals quickly safely.
-        </div>
-        <div>
-            <h3>Education</h3>
-            <p>University of California Riverside Riverside, California 	Expected Graduation: June 2026</p>
-            <p>Chabot College Hayward California 			EXPECTED GRADUATION  May 2024
-                AS Computer Science (AS) 
-                AS Lib Arts & Sci-Sci, Math, Tech.
-                AS Math
-                Current Overall GPA: 3.55
-            </p>
+    <!-- Experience Section -->
+    <div>
+        <h3 id="experience">Experience</h3>
+        <table border="1" cellspacing="0" cellpadding="5">
+            <tr>
+                <th>Company</th>
+                <th>Title</th>
+                <th>Dates</th>
+            </tr>
+            <tr>
+                <td>Burger King, Hayward CA</td>
+                <td>Shift Manager</td>
+                <td>Aug 2017 – Dec 2022</td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    Delegated tasks to team members. Supervised safety requirements and standard operating procedures. 
+                    Handled escalated customer complaints to provide resolutions and promote loyalty.
+                </td>
+            </tr>
+            <tr>
+                <td>Balboa Logistics & Airport Services, Panama</td>
+                <td>Checking Assistant</td>
+                <td>Aug 2016 – Apr 2017</td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    Assisted Lufthansa and Turkish Airlines. Executed safety protocols for customer and aircraft operations. 
+                    Directed passengers through checkpoints and terminals safely and efficiently.
+                </td>
+            </tr>
+        </table>
+    </div>
 
+    <!-- Education Section -->
+    <div>
+        <h3 id="education">Education</h3>
+        <table border="1" cellspacing="0" cellpadding="5">
+            <tr>
+                <th>Institution</th>
+                <th>Degree</th>
+                <th>Dates</th>
+            </tr>
+            <tr>
+                <td>University of California, Riverside</td>
+                <td>B.S. in Computer Science</td>
+                <td>Expected June 2026</td>
+            </tr>
+            <tr>
+                <td>Chabot College, Hayward CA</td>
+                <td>AS in Computer Science, AS in Math, AS in Liberal Arts</td>
+                <td>Expected May 2024</td>
+            </tr>
+        </table>
+    </div>
 
-        </div>
-        <div>
-            <h3 id="coursework">Relevant Coursework</h3>
-            <ul>
-            <li>DISCRETE STRUCTURES</li>
-            <li>INTERMEDIATE DATA STRUCTUCTURE And Algorithms</li>
-            <li>LOGIC DESIGN</li>
-            </ul>
-        </div>
+    <!-- Coursework Section -->
+    <div>
+        <h3 id="coursework">Coursework</h3>
+        <ul>
+            <li>Discrete Structures</li>
+            <li>Intermediate Data Structures and Algorithms</li>
+            <li>Logic Design</li>
+        </ul>
+    </div>
 
+    <!-- Skills Section -->
+    <div>
+        <h3 id="skills">Skills</h3>
+        <ul>
+            <li>Languages: Python, C++, Spanish (Native), English (Fluent)</li>
+            <li>Tools: Unity, Unix, Microsoft Office, Autodesk Fusion 360</li>
+        </ul>
+    </div>
 
-        <div>
-            <h3>Skills</h3>            
-                    <p>Language:
-                    Native in Spanish
+    <!-- Projects Section -->
+    <div>
+        <h3 id="projects">Projects</h3>
+        <ul>
+            <li>Founded and led the Chabot College CS Club, growing it to 120 members</li>
+            <li>Studied and built robotic Rubik’s Cube solvers using algorithms</li>
+            <li>Designed the propeller for a solar-powered boat in the Solar Regatta competition</li>
+            <li>Worked on NASA workshop project involving camera systems for lunar deployment</li>
+            <li>Led a team of four through multiple AI-focused hackathons</li>
+        </ul>
+    </div>
 
-                    Fluent in English </p>
-
-
-                    <p>Skills:
-                    Python
-                    C++
-                    Unity
-
-                    Unix
-                    Microsoft Office
-                    Autodesk: Fusion 360</p>
-
-
-
-
-        </div>
-        <div>
-            <h3>Projects</h3>
-            <p>Initiated and led the computer science club in Chabot College that grew to 120 members.
-            learned algorithms and learned about robotic Rubik's cube robot solvers. 
-            Designed the propeller for a solar motor boat for solar regatta competition
-            NASA workshop work in camera system to send tardisgate to the moon
-            Lead a team of 4 through different hackathons working on AI.</p>
-        </div>
-    </body>
+</body>
 </html>
