--- a/index.html
+++ b/index.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Tony Liu</title>
+
+   <style>
+        body{
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            }
+        
+        
+   </style>
 </head>
+
+
 <body>
 
-    <!-- Header and Image -->
     <img src="Photo.png" alt="Tony Liu" width="200" height="200">
     <h1 id="name">Tony Liu</h1>
     <h2 id="subheading">Majoring in Computer Science | Student at UC Riverside</h2>
 
-    <!-- Social Links -->
     <div>
         <a href="https://www.linkedin.com/in/tony-liu-li/">LinkedIn</a> |
         <a href="https://github.com/Yilunot">GitHub</a> |
         <a href="mailto:Tonyliu05@hotmail.com">Email</a>
     </div>
-
-    <!-- About Section -->
+`
     <div>
         <h3 id="about">About Me</h3>
         <p>
@@ -27,7 +35,6 @@
         </p>
     </div>
 
-    <!-- Experience Section -->
     <div>
         <h3 id="experience">Experience</h3>
         <table border="1" cellspacing="0" cellpadding="5">
@@ -50,7 +57,7 @@
             <tr>
                 <td>Balboa Logistics & Airport Services, Panama</td>
                 <td>Checking Assistant</td>
-                <td>Aug 2016 – Apr 2017</td>
+                <td>Aug 2016 - Apr 2017</td>
             </tr>
             <tr>
                 <td colspan="3">
@@ -61,7 +68,6 @@
         </table>
     </div>
 
-    <!-- Education Section -->
     <div>
         <h3 id="education">Education</h3>
         <table border="1" cellspacing="0" cellpadding="5">
@@ -73,7 +79,7 @@
             <tr>
                 <td>University of California, Riverside</td>
                 <td>B.S. in Computer Science</td>
-                <td>Expected June 2026</td>
+                <td>Expected December 2026</td>
             </tr>
             <tr>
                 <td>Chabot College, Hayward CA</td>
@@ -83,7 +89,6 @@
         </table>
     </div>
 
-    <!-- Coursework Section -->
     <div>
         <h3 id="coursework">Coursework</h3>
         <ul>
@@ -93,7 +98,6 @@
         </ul>
     </div>
 
-    <!-- Skills Section -->
     <div>
         <h3 id="skills">Skills</h3>
         <ul>
@@ -102,7 +106,6 @@
         </ul>
     </div>
 
-    <!-- Projects Section -->
     <div>
         <h3 id="projects">Projects</h3>
         <ul>
