--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             }
+        img {
+            border-radius: 50%;
+        }
+        h1, h2{
+            margin-bottom: 10px;
+        }
+        h3 {
+            margin-top: 20px;
+        }
         
         
    </style>
