--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <title>Tony Liu</title>
 
    <style>
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px;
+        }
         body{
             font-family: Arial, sans-serif;
             margin: 20px;
             }
         img {
             border-radius: 50%;
+            float: left;
+            margin-right: 20px;
         }
         h1, h2{
             margin-bottom: 10px;
@@ -18,24 +26,44 @@
         h3 {
             margin-top: 20px;
         }
-        
-        
-   </style>
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 10px;
+        }
+        a {
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        li {
+            margin: 5px 0;
+        }
+
+    </style>
 </head>
 
 
 <body>
+    <div class ="header">
+        <img src="Photo.png" alt="Tony Liu" width="200" height="200">
+        <div>
+            <h1 id="name">Tony Liu</h1>
+            <h2 id="subheading">Majoring in Computer Science | Student at UC Riverside</h2>
 
-    <img src="Photo.png" alt="Tony Liu" width="200" height="200">
-    <h1 id="name">Tony Liu</h1>
-    <h2 id="subheading">Majoring in Computer Science | Student at UC Riverside</h2>
-
-    <div>
-        <a href="https://www.linkedin.com/in/tony-liu-li/">LinkedIn</a> |
-        <a href="https://github.com/Yilunot">GitHub</a> |
-        <a href="mailto:Tonyliu05@hotmail.com">Email</a>
+            <div class="socials">
+                <a href="https://www.linkedin.com/in/tony-liu-li/">LinkedIn</a> |
+                <a href="https://github.com/Yilunot">GitHub</a> |
+                <a href="mailto:Tonyliu05@hotmail.com">Email</a>
+            </div>
+        </div>
     </div>
-`
+
     <div>
         <h3 id="about">About Me</h3>
         <p>
@@ -110,7 +138,8 @@
     <div>
         <h3 id="skills">Skills</h3>
         <ul>
-            <li>Languages: Python, C++, Spanish (Native), English (Fluent)</li>
+            <li>Languages: Spanish (Native), English (Fluent)</li>
+            <li>Programming Languages: Python, C++, Java, JavaScript, HTML, CSS</li>
             <li>Tools: Unity, Unix, Microsoft Office, Autodesk Fusion 360</li>
         </ul>
     </div>
