--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
 <body>
     <div class ="header">
-        <img src="Photo.png" alt="Tony Liu" width="200" height="200">
+        <img src="images/Photo.png" alt="Tony Liu" width="200" height="200">
         <div>
             <h1 id="name">Tony Liu</h1>
             <h2 id="subheading">Majoring in Computer Science | Student at UC Riverside</h2>
 
             <div class="socials">
-                <a href="https://www.linkedin.com/in/tony-liu-li/">LinkedIn</a> |
-                <a href="https://github.com/Yilunot">GitHub</a> |
-                <a href="mailto:Tonyliu05@hotmail.com">Email</a>
+                <a href="https://www.linkedin.com/in/tony-liu-li/" target="_blank">LinkedIn</a> |
+                <a href="https://github.com/Yilunot" target="_blank">GitHub</a> |
+                <a href="mailto:Tonyliu05@hotmail.com" target="_blank">Email</a>
             </div>
         </div>
     </div>
