--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Tony Liu</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 
@@ -15,9 +16,9 @@
             <h2 id="subheading">Majoring in Computer Science | Student at UC Riverside</h2>
 
             <div class="socials">
-                <a href="https://www.linkedin.com/in/tony-liu-li/" target="_blank">LinkedIn</a> |
-                <a href="https://github.com/Yilunot" target="_blank">GitHub</a> |
-                <a href="mailto:Tonyliu05@hotmail.com" target="_blank">Email</a>
+                <a href="https://www.linkedin.com/in/tony-liu-li/" target="_blank"> <i class="fa-brands fa-linkedin"></i> LinkedIn</a> |
+                <a href="https://github.com/Yilunot" target="_blank"> <i class="fa-brands fa-github"></i> GitHub</a> |
+                <a href="mailto:Tonyliu05@hotmail.com" target="_blank"> <i class="fa-solid fa-envelope"></i> Email</a>
             </div>
         </div>
     </div>
