--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         </div>
     </div>
 
+    <nav>
+        <ul>
+            <li><a href="#about"> About <i class="fa-solid fa-user"></i></a></li>
+            <li><a href="#experience"> Experience <i class="fa-solid fa-briefcase"></i></a></li>
+            <li><a href="#education"> Education <i class="fa-solid fa-graduation-cap"></i></a></li>
+            <li><a href="#coursework"> Coursework <i class="fa-solid fa-book"></i></a></li>
+            <li><a href="#skills"> Skills <i class="fa-solid fa-cogs"></i></a></li>
+            <li><a href="#projects"> Projects <i class="fa-solid fa-code"></i></a></li>
+        </ul>
     <div>
         <h3 id="about">About Me</h3>
         <p>
