added icon to sections

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="#projects"> Projects <i class="fa-solid fa-code"></i></a></li>
         </ul>
     <div>
-        <h3 id="about">About Me</h3>
+        <h3 id="about">About Me <i class="fa-solid fa-user"></i></h3>
         <p>
             Hi, I'm Tony Liu, a Computer Science student at UC Riverside. 
             I have a passion for coding and technology, and I'm always eager to learn new things.
@@ -41,7 +41,7 @@
     </div>
 
     <div>
-        <h3 id="experience">Experience</h3>
+        <h3 id="experience">Experience <i class="fa-solid fa-briefcase"></i></h3>
         <table border="1" cellspacing="0" cellpadding="5">
             <tr>
                 <th>Company</th>
@@ -74,7 +74,7 @@
     </div>
 
     <div>
-        <h3 id="education">Education</h3>
+        <h3 id="education">Education <i class="fa-solid fa-graduation-cap"></i></h3>
         <table border="1" cellspacing="0" cellpadding="5">
             <tr>
                 <th>Institution</th>
@@ -95,7 +95,7 @@
     </div>
 
     <div>
-        <h3 id="coursework">Coursework</h3>
+        <h3 id="coursework">Coursework <i class="fa-solid fa-book"></i></h3>
         <ul>
             <li>Discrete Structures</li>
             <li>Intermediate Data Structures and Algorithms</li>
@@ -104,7 +104,7 @@
     </div>
 
     <div>
-        <h3 id="skills">Skills</h3>
+        <h3 id="skills">Skills <i class="fa-solid fa-cogs"></i></h3>
         <ul>
             <li>Languages: Spanish (Native), English (Fluent)</li>
             <li>Programming Languages: Python, C++, Java, JavaScript, HTML, CSS</li>
@@ -113,7 +113,7 @@
     </div>
 
     <div>
-        <h3 id="projects">Projects</h3>
+        <h3 id="projects">Projects <i class="fa-solid fa-code"></i></h3>
         <ul>
             <li>Founded and led the Chabot College CS Club, growing it to 120 members</li>
             <li>Studied and built robotic Rubik’s Cube solvers using algorithms</li>
