--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li><a href="#skills"> Skills <i class="fa-solid fa-cogs"></i></a></li>
             <li><a href="#projects"> Projects <i class="fa-solid fa-code"></i></a></li>
         </ul>
+    </nav>
     <div>
         <h3 id="about">About Me <i class="fa-solid fa-user"></i></h3>
         <p>
