--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!--Primary meta tags-->
+<meta name="title" content="Tony Liu | Computer Science Student">
+<meta name="description" content="Portfolio of Tony Liu, a Computer Science student at UC Riverside with experience in programming, leadership, and AI projects.">
+<meta name="keywords" content="Tony Liu, computer science, UC Riverside, portfolio, software engineer, projects, AI, programming">
+<meta name="author" content="Tony Liu">
+
 <head>
     <meta charset="UTF-8">
     <title>Tony Liu</title>
