meta for facebook and twitter

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
 <meta name="keywords" content="Tony Liu, computer science, UC Riverside, portfolio, software engineer, projects, AI, programming">
 <meta name="author" content="Tony Liu">
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://Yilunot.github.io/Personal-Page/">
+<meta property="og:title" content="Tony Liu | Computer Science Student">
+<meta property="og:description" content="Check out my projects, experience, and skills.">
+<meta property="og:image" content="https://Yilunot.github.io/Personal-Page/images/Photo.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://Yilunot.github.io/Personal-Page/">
+<meta property="twitter:title" content="Tony Liu | Computer Science Student">
+<meta property="twitter:description" content="Check out my projects, experience, and skills.">
+<meta property="twitter:image" content="https://Yilunot.github.io/Personal-Page/images/Photo.png">
+
+
+
 <head>
     <meta charset="UTF-8">
     <title>Tony Liu</title>
