--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--Primary meta tags-->
-<meta name="title" content="Tony Liu | Computer Science Student">
-<meta name="description" content="Portfolio of Tony Liu, a Computer Science student at UC Riverside with experience in programming, leadership, and AI projects.">
-<meta name="keywords" content="Tony Liu, computer science, UC Riverside, portfolio, software engineer, projects, AI, programming">
-<meta name="author" content="Tony Liu">
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://Yilunot.github.io/Personal-Page/">
-<meta property="og:title" content="Tony Liu | Computer Science Student">
-<meta property="og:description" content="Check out my projects, experience, and skills.">
-<meta property="og:image" content="https://Yilunot.github.io/Personal-Page/images/Photo.png">
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://Yilunot.github.io/Personal-Page/">
-<meta property="twitter:title" content="Tony Liu | Computer Science Student">
-<meta property="twitter:description" content="Check out my projects, experience, and skills.">
-<meta property="twitter:image" content="https://Yilunot.github.io/Personal-Page/images/Photo.png">
-
-
-
 <head>
     <meta charset="UTF-8">
     <title>Tony Liu</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
+    <!--Primary meta tags-->
+    <meta name="title" content="Tony Liu | Computer Science Student">
+    <meta name="description" content="Portfolio of Tony Liu, a Computer Science student at UC Riverside with experience in programming, leadership, and AI projects.">
+    <meta name="keywords" content="Tony Liu, computer science, UC Riverside, portfolio, software engineer, projects, AI, programming">
+    <meta name="author" content="Tony Liu">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://Yilunot.github.io/Personal-Page/">
+    <meta property="og:title" content="Tony Liu | Computer Science Student">
+    <meta property="og:description" content="Check out my projects, experience, and skills.">
+    <meta property="og:image" content="https://Yilunot.github.io/Personal-Page/images/Photo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://Yilunot.github.io/Personal-Page/">
+    <meta property="twitter:title" content="Tony Liu | Computer Science Student">
+    <meta property="twitter:description" content="Check out my projects, experience, and skills.">
+    <meta property="twitter:image" content="https://Yilunot.github.io/Personal-Page/images/Photo.png">
+
+    <!-- Fediverse / indieWeb -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://Yilunot.github.io/Personal-Page/">
+    <meta property="og:title" content="Tony Liu | Computer Science Student">
+    <meta property="og:description" content="Check out my projects, experience, and skills.">
+    <meta property="og:image" content="https://Yilunot.github.io/Personal-Page/images/Photo.png">
 </head>
 
 
