--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Portfolio of Tony Liu, a Computer Science student at UC Riverside with experience in programming, leadership, and AI projects.">
     <meta name="keywords" content="Tony Liu, computer science, UC Riverside, portfolio, software engineer, projects, AI, programming">
     <meta name="author" content="Tony Liu">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://Yilunot.github.io/Personal-Page/">
