--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body>
     <div class ="header">
-        <img src="images/Photo.png" alt="Tony Liu" width="200" height="200">
+        <img src="images/Photo.webp" alt="Tony Liu" width="200" height="200">
         <div>
             <h1 id="name">Tony Liu</h1>
             <h2 id="subheading">Majoring in Computer Science | Student at UC Riverside</h2>
